# sqlxinsert

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: common.rs  lib.rs
tests/: psgl_test.rs  psql_test.rs  raw_psql_test.rs  raw_psql_test_generic.rs  raw_sqlite_test.rs  raw_sqlite_test_generic.rs  sqlite_test.rs
