[package]
name = "sqlxinsert"
version = "0.6.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
license = "MIT"
description = "Sqlx derive macro for simpler inserts"
repository = "https://github.com/fbucek/sqlxinsert"
readme = "README.md"
exclude = [".github/*"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
async-trait = "0.1"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "sqlite", "postgres"] }

[dev-dependencies]
tokio = { version = "1.19", features= ["rt-multi-thread",  "macros"] }
serial_test = "0.9.0"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "sqlite", "postgres"] }
