[package]
name = "sqlxinsert"
version = "0.10.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
license = "MIT"
description = "Sqlx derive macro for simpler inserts"
repository = "https://github.com/fbucek/sqlxinsert"
readme = "README.md"
exclude = [".github/*"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
async-trait = "0.1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio"] }

[features]
default = ["sqlite", "postgres"]
sqlite = [ "sqlx/sqlite" ]
postgres = [ "sqlx/postgres" ]


[dev-dependencies]
tokio = { version = "1.19", features= ["rt-multi-thread",  "macros"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "postgres"] }
